--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       # 时区
       - TZ=Asia/Shanghai
       # 加密密钥与登录配置（请在部署前改成自己的强随机值）
-      - ENCRYPTION_KEY=mTCtGniizCnRvIrxzpVnyp1MNBrzG8wGaNOQaqKI3G0=
+      - ENCRYPTION_KEY=
       - ADMIN_USERNAME=admin
-      - ADMIN_PASSWORD=Whd990208@
+      - ADMIN_PASSWORD=admin123
       - JWT_SECRET=1234567890987654321
       # 可选：API Token
       - API_TOKEN=
